Document the employee management project
Make the project easier to evaluate and reproduce with source-verified setup, architecture, usage, and limitations.